# Daily-Newspaper

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  Newspaper_Implementation_Plan.md  README.md  feeds.json  index.html
.github/workflows/: deploy.yml
src/: gcs.rs  main.rs  models.rs  scraper.rs  template_context.rs
templates/: newspaper.html
