[package]
name = "Daily-Newspaper"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.5"
chrono = "0.4.44"
feed-rs = "2.3.1"
gcloud-storage = "1.3.0"
google-cloud-auth = "1.7.0"
html-escape = "0.2.13"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
